--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
-    "name": "FavoritePlaces",
-    "slug": "FavoritePlaces",
+    "name": "Favorite Zone",
+    "slug": "favorite-zone",
     "version": "1.0.0",
     "orientation": "portrait",
+    "owner": "reuben-k-o",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/adaptive-icon.png",
