--- a/eas.json
+++ b/eas.json
@@ -13,6 +13,12 @@
       },
       "distribution": "internal"
     },
+    "preview2": {
+      "android": {
+        "gradleCommand": ":app:assembleRelease"
+      }
+    },
+
     "production": {}
   },
   "submit": {
